Got Sass working

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <head>
+    <style type="text/css" rel="css/main.css"></style>
+  </head>
   <body>
     <div id="wrapper"></div>
     <script src="src/build.js"></script>
