Added basic styles for the cards

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <style type="text/css" rel="css/main.css"></style>
+    <link type="text/css" rel="stylesheet" href="css/main.css"></style>
   </head>
   <body>
     <div id="wrapper"></div>
